DDP-5899 Fixed z-index for menu

--- a/ddp-workspace/projects/ddp-cgc/src/app/components/header/header.component.scss
+++ b/ddp-workspace/projects/ddp-cgc/src/app/components/header/header.component.scss
@@ -1,6 +1,7 @@
 .overlay {
   top: 0;
   left: 0;
+  z-index: 2;
   width: 100%;
   position: absolute;
   .navbar {
